k8s/network-policies/allow-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system # Select the kube-system namespace
          podSelector:
            matchLabels:
              k8s-app: kube-dns # Select the kube-dns pods
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
