k8s/network-policies/allow-from-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-traefik
  namespace: dir-tenant # Target namespace for the policy
spec:
  # Apply this policy to all pods in the dir-tenant namespace
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        # Allow traffic from pods in the 'traefik' namespace
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik # Select the traefik namespace
          # And only from pods matching these labels (Traefik pods)
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: traefik-traefik
              app.kubernetes.io/name: traefik
